# upsales-python-sdk

./: -  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_IMPLEMENTATION_ROADMAP.md  CLAUDE.md  CONTRIBUTING.md  ENDPOINT_TASK_LIST.md  PROJECT_ACTION_LIST.md  README.md  TASKS.md  Upsales API.postman_collection.json  agent.md  api_endpoints_with_fields.json  mkdocs.yml  playground.py  pyproject.toml
.github/workflows/: ci.yml
ai_temp_files/: ACCOUNTS_FIELD_VALIDATION_RESULTS.md  ACCOUNTS_SEARCH_VERIFICATION.md  ADDRESS_TYPES_AND_CREATE_BUG_FIX.md  ADVANCED_QUERY_SYNTAX_RESEARCH.md  API_FILE_QUICK_REFERENCE.md  COMPANIES_COMPLETE_VALIDATION_SUMMARY.md  COMPANY_MODEL_FIX_SUMMARY.md  COMPLETE_VALIDATION_SUITE_SUMMARY.md  DOCUMENTATION_CLEANUP_ANALYSIS.md  FIELD_SELECTION_FIX_COMPLETE.md  FIELD_SELECTION_VALIDATION_RESULTS.md  GIT_COMMIT_SUMMARY.md  MULTI_SORT_VERIFICATION_REPORT.md  PROJECT_STATUS.md  README.md  TEST_FAILURE_BREAKDOWN.md  TEST_SUITE_ANALYSIS.md  VCR_FIRST_WORKFLOW_UPDATE.md  accounts_bulk_editability.txt  check_sort_issue.py  companies_editability_results.txt  companies_field_editability_full.txt  companies_field_selection_full_test.txt  companies_field_selection_results.txt  companies_pagination_validation.txt  companies_search_validation.txt  companies_sort_validation.txt  crud_validation_addition.md  debug_create_bug.py  debug_sort.py  debug_turnover_sort.py  documentation_step_addition.md  find_unmapped_fields.py  guide_fix_summary.md  merge_summary.md  postman_api_analysis.md  productcategories_generated.py  show_create_script_bug.py  sync_api_file_with_implementation.py  workflow_validation_report.md
docs/: AI_DEVELOPMENT_MULTIPLIER_EFFECT.md  COMPLETE_WORKFLOW_BREAKDOWN.md  WORKFLOW_ACTUAL_METRICS.md  api-methods-design.md  authentication.md  endpoint-map.md  getting-started.md  index.md  project-improvements.md  terminology.md  tool-recommendations.md  vcr-integration-tests-todo.md
docs/api-reference/: client.md  exceptions.md  http.md  models.md  resources.md  settings.md
docs/examples/: advanced-patterns.md  basic-usage.md
docs/guides/: ENHANCED_MODEL_GENERATION.md  adding-endpoints-ai.md  adding-endpoints.md  agent-efficiency-strategies.md  api-file-reference.md  automated-orchestration-guide.md  claude-code-hooks.md  hook-automation-tradeoffs.md  model-validation.md  reducing-token-usage-in-agents.md  testing-field-capabilities.md  using-api-endpoints-reference.md
docs/patterns/: adding-resources.md  automation-tools-reference.md  creating-models.md  custom-fields.md  field-types.md  nested-required-fields.md  pydantic-v2-features.md  type-safe-updates.md  vcr-field-validation-guide.md  vcr-testing.md
docs/research/: advanced-query-syntax.md
examples/: autocomplete_frozen_fields.py  basic_usage.py  field_aliases.py  ide_autocomplete_demo.py  sandbox_auth.py
scripts/: README.md  discover_available_endpoints.py  extract_endpoint_info.py  fetch_all_custom_fields.py  standardize_naming.py  test_custom_field_crud.py  test_delete_operation.py  test_field_editability.py  test_field_editability_bulk.py  test_field_selection.py  test_full_crud_lifecycle.py  test_pagination.py  test_required_create_fields.py  test_required_update_fields.py  test_search_validation.py  test_sort_validation.py  validate_and_update_models.py
tests/: conftest.py
tests/integration/: __init__.py  test_activities_integration.py  test_activity_list_integration.py  test_activity_quota_integration.py  test_activity_types_integration.py  test_ad_accounts_integration.py  test_ad_campaigns_integration.py  test_ad_creatives_integration.py  test_agreement_groups_integration.py  test_agreements_integration.py  test_all_models_integration.py  test_apikeys_integration.py  test_appointments_integration.py  test_banner_groups_integration.py  test_client_categories_integration.py  test_client_category_types_integration.py  test_client_ip_info_integration.py  test_client_ips_integration.py  test_client_relations_integration.py  test_companies_integration.py  test_contact_relations_integration.py  test_contacts_integration.py  test_contract_accepted_integration.py  test_currencies_integration.py  test_custom_fields_integration.py  test_esigns_integration.py  test_events_integration.py  test_file_uploads_integration.py  test_files_integration.py  test_flows_integration.py  test_form_submits_integration.py  test_forms_integration.py  test_group_mail_categories_integration.py  test_journey_steps_integration.py  test_lead_channels_integration.py  test_lead_sources_integration.py  test_leads_integration.py  test_list_views_integration.py  test_mail_campaigns_integration.py  test_mail_domains_integration.py  (+46 more)
tests/templates/: resource_template.py
tests/unit/: test_activities_model_typing.py  test_activities_resource.py  test_activity_list_item_typing.py  test_activity_quota_resource.py  test_ad_accounts_resource.py  test_ad_campaign.py  test_ad_campaigns_resource.py  test_ad_creatives_resource.py  test_address_list.py  test_address_model.py  test_agreements_resource.py  test_apikeys_resource.py  test_appointments_resource.py  test_assignment.py  test_auth.py  test_auth_integration.py  test_banner_groups_resource.py  test_base_model.py  test_base_resource.py  test_bulk_resource.py  test_bundled_product_model.py  test_cli.py  test_client_ip_info_resource.py  test_client_ips_resource.py  test_company_addresslist_integration.py  test_contacts_resource.py  test_contract_accepted_resource.py  test_currencies_resource.py  test_currency_configuration.py  test_custom_fields.py  test_data_source_resource.py  test_engage_credit_transactions_resource.py  test_esign_function_resource.py  test_events_resource.py  test_exceptions.py  test_file_upload_resource.py  test_files_resource.py  test_form_action.py  test_form_element.py  test_form_submits_resource.py  (+72 more)
upsales/: __init__.py  auth.py  cli.py  client.py  exceptions.py  http.py  py.typed  settings.py  types.py  validators.py
upsales/models/: __init__.py  activities.py  activity_list_item.py  activity_quota.py  activity_types.py  (+124 more)
(+514 files in other folders)
