[project]
name = "upsales"
version = "0.1.0"
description = "Async Python wrapper for Upsales CRM API"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Will", email = "will@upsales.com"}
]
keywords = ["upsales", "crm", "api", "async", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.1.0",
    "vcrpy>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=25.9.0",
    "bandit>=1.7.0",
    "interrogate>=1.7.0",
    "coverage>=7.11.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
upsales = "upsales.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upsales"]

[tool.hatch.build.targets.sdist]
include = ["upsales/", "upsales/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "tests/templates",  # Template files (contain placeholders)
    "ai_temp_files",    # Temporary research/test files
    "scripts",          # Utility scripts (not production code)
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "A002",   # Allow `id` parameter shadowing builtin (matches Upsales API convention)
    "TC001",  # Don't require moving app imports to TYPE_CHECKING (cleaner for SDK)
    "TC003",  # Don't require moving stdlib imports to TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["S101", "B017", "E721", "E712", "SIM117"]  # Allow assert, pytest.raises(Exception), type comparisons, == True/False, nested with
"examples/**/*.py" = ["F841"]  # Allow unused variables in examples (for demonstration)
"upsales/models/*.py" = ["N815", "SIM102"]  # Allow camelCase field names, nested ifs (readability for complex validation)
"upsales/cli.py" = ["B904", "SIM102", "F841"]  # Allow raise without from, nested ifs (readability), unused vars
"upsales/resources/*.py" = ["N803"]  # Allow camelCase params to match API field names
"upsales/http.py" = ["SIM105"]  # Allow try-except-pass for clearer error handling

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "upsales.models.*"
# Pydantic models: computed fields, _client injection, type aliases, generic dicts
disable_error_code = ["prop-decorator", "override", "no-any-return", "assignment", "type-arg", "arg-type", "call-arg", "import-untyped", "unused-ignore"]

[[tool.mypy.overrides]]
module = "upsales.resources.*"
# Resource managers: _client injection, method overrides, generic type args
disable_error_code = ["call-arg", "override", "type-arg", "type-var", "arg-type", "union-attr", "operator", "unused-ignore", "attr-defined", "valid-type"]

[[tool.mypy.overrides]]
module = "upsales.resources.base"
# Generic type issues with asyncio and bulk operations
disable_error_code = ["valid-type", "attr-defined", "misc"]

[[tool.mypy.overrides]]
module = "upsales.settings"
# Pydantic BaseSettings initialization is dynamic
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "upsales.types"
# TypedDict fields use bare dict for flexibility with API responses
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "upsales.http"
# Client may be None during context manager lifecycle
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=upsales --cov-report=html --cov-report=term --cov-report=term-missing --cov-fail-under=75"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.interrogate]
fail-under = 90
exclude = ["tests", "examples", "docs"]
verbose = 1
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true

[tool.coverage.run]
parallel = true
branch = true
source = ["upsales"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B110", "B311", "B404", "B603", "B607"]  # Allow assert, try-except-pass, random for jitter, subprocess in CLI

[tool.ty.src]
# Only check upsales source, exclude tests and templates
include = ["upsales"]

[tool.ty.rules]
# Pydantic models use **kwargs patterns that ty doesn't understand
invalid-argument-type = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
# Method overrides in resources are intentional (Liskov violations for API design)
invalid-method-override = "ignore"
# Pydantic Field() with complex defaults
invalid-assignment = "ignore"
# Generic type syntax ty doesn't fully support yet
invalid-type-form = "ignore"
non-subscriptable = "ignore"
invalid-type-arguments = "ignore"
# Optional client patterns (context manager lifecycle)
possibly-missing-attribute = "ignore"
# Type narrowing not always recognized
invalid-return-type = "ignore"
# Operators on dynamic types from API responses
unsupported-operator = "ignore"
# Module resolution issues with circular imports
unresolved-import = "ignore"
unresolved-reference = "ignore"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]
